# mutlibrary

./: .gitignore  .pre-commit-config.yaml  .~lock.test.tsv#  .~lock.test_aa.tsv#  Makefile  README.md  pyproject.toml  requirements.txt  test.tsv  test_aa.tsv
.github/workflows/: ci.yml
src/mutlibrary/: __init__.py  config.py  main.py
src/mutlibrary/api/: __init__.py
src/mutlibrary/core/: __init__.py  generator.py
src/mutlibrary/jobs/: __init__.py
src/mutlibrary/models/: __init__.py  annotator copy.py  annotator.py  clinvar copy.py  clinvar.py  mutator.py
src/mutlibrary/services/: __init__.py
src/mutlibrary/utils/: __init__.py  distances.py
tests/: conftest.py
tests/core/: test_demultiplexer.py
tests/data/: annotations.json  real_examples.tsv  real_regions.json  regions.json  test.fasta  test_cases_clinvar.tsv  test_cds.fasta  test_real.fasta  tp53_ENST00000269305_cds.fasta  tp53_ENST00000269305_genomic.fasta
tests/models/: test_clinvar.py  test_mutator.py
