[tool.poetry]
name = "mutlibrary"
version = "0.1.0"
description = "This is a package to generate mutation libraries from input sequences."
authors = ["Marco Mernberger <marco.mernberger@gmail.com>"]
readme = "README.md"
packages = [
  { include = "mutlibrary", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.1"
typer = { version = "^0.12.0", extras = ["all"] }

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.6.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
sphinx = "^7.0.0"
myst-parser = "^3.0.0"
furo = "^2024.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# --- Black ---
[tool.black]
line-length = 80
target-version = ["py312"]
include = "\\.pyi?$"

# --- Ruff ---
[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src", "tests"]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # Black regelt line-length
exclude = [".venv", "build", "dist", ".git", ".mypy_cache", ".ruff_cache"]

[tool.ruff.isort]
known-first-party = ["mutlibrary"]

# --- pytest ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

# --- mypy ---
[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
plugins = []
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

# --- coverage (optional, nice for CI) ---
[tool.coverage.run]
source = ["mutlibrary"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
